# esp-micro-speech-features

./: CMakeLists.txt  idf_component.yml  library.json
.github/workflows/: publish.yml
